--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -1,4 +1,10 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/11.jpg" title="头条"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/13.jpg" title="专题"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p> <a href="https://github.com/xcbfpq327/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/hG75Ez1eTyeZN.mp4" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/YongHeng-360p.mp4" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/Lijianhui-200804-720.mp4" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/dmt.mp4" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/szt.mp4" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/w2/raw/master/rs/Uc6y.mp4" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-10/425.mp4" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-12-23/lin-720p.mp4" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/v2/raw/master/wnrl.mp4" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/mtdwh.mp4" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2014-1-7/zfzx.mp4" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/5-YiSu_MH-360p.mp4" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/5N.8.mp4" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/m1/raw/master/TdowhauWx9WiM.mp4" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/1-Xuezhongmei_MH-360p.mp4" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-18/huangxiaomin-tuidang.mp4" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/wm.mp4" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/w5/raw/master/fy.mp4" target="_blank">风雨天地行</a></p></td></tr><tr><td width="742"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://gitlab.com/szzdlab/www/raw/master/v/2018-11-4/SY-Classical-Chinese-Dance-Technique-Collection-2018.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/9p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/zjmd1_19.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-11-12/zf-dsp-1128.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-6-1/st5-29.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://gitlab.com/szzdlab/v1/raw/master/2017-7-5/3-JTT_CN_MH-360p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/wl.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2013-10-28/hongchaoyinmou-hi.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://gitlab.com/szzdlab/w5/raw/master/tzrs.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/er3n_3VVJ.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/XmL0_0XDL2p.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/rs/NG8l.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/wt6Y_vPhM.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/5Vu3_XS2V.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/vG2w_fwq.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O2jN_uD.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://gitlab.com/szzdlab/v/raw/master/v/2018-12-14/1400forge-1210.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/C1WZ_mj.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://gitlab.com/szzdlab/w3/raw/master/qh.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/JZ5e_5Vusp.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://gitlab.com/szzdlab/w2/raw/master/lyp/0iY.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://gitlab.com/szzdlab/www/raw/master/v/2019-2-21/guanguimin.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://gitlab.com/szzdlab/m1/raw/master/mjjy.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/c4rB_QQbr.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://gitlab.com/szzdlab/w1/raw/master/O23c_E.mp4" target="_blank"><img width="130" src="https://raw.githubusercontent.com/fvnwm2273/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/xcbfpq327/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xcbfpq327/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521159.md#1" target="_blank">王友群：习近平为什么抓捕叶简明？</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521159.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/dc2d2a3187e1d5fe56d9d6441d88d339-600x400-150x120.jpg" align ="left"></a>最近，中国华信集团老板叶简明与美国民主党总统候选人拜登家族“交易”的新闻，轰动美国与世界。
+
+据香港《南华早报》报导，叶简明2018年2月16日被带走，对叶简明进行调查的命令直接由中国国家主席习近平下达。叶简明与拜登家族有哪些“交易”？习近平为什么抓捕叶简明？
+叶简明与拜登家族的“交易”
+综合美国媒体报导，叶简.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 1:48 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521419.md#1" target="_blank">【网海拾贝】两个世界，两个景象，两个命运</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521419.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/c31ab0d1f918edea24430da6a650ddca-150x120.jpg" align ="left"></a>看着美国人站在雨中几个小时投票，竟然有些唏嘘，中国人什么时候能干这事，中国就是世界上最幸福国度。站在大雨中投票的零乱寻常人，聚在大会堂中次序井然的共产党人，两个世界，两个景象，两个命运。雨中投票，那个国是他们自己的，会堂中端坐，那些人连自己都是别人的。人类决不能都成了几个人私产。——@10anfeng......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 1:46 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520875.md#1" target="_blank">隋志：一部部真相影片 一出出人间惨剧</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520875.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/05/2019-5-21-fox-11-program_12-ss-150x120.jpg" align ="left"></a>二零二零年十月三十日，美国国家广播公司（NBC）在南加州棕榈泉地方台的节目中，介绍了Swoop Films电影公司的获奖纪录片《寻找勇气》(Finding Courage)。该影片披露了鲜为人知的中共迫害内幕：王易非与丈夫流亡美国，她哥哥被中共关押、在狱中13年九死一生，妹妹王可非被迫害惨死、遗体冰冻已19年。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 8:34 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520725.md#1" target="_blank">高寒：顺天意者昌 逆天意者亡</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520725.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2010/03/1003141612551366-150x120.jpg" align ="left"></a>古人云：有智不在年老少，无智空活一百年。人要有人的活法，做人就要活个明明白白，不要在可悲与遗憾中稀理湖涂的过一生。此文也许能让更多人，从历史实证中得到一些启示。希望每个人都能沉下心来好好的反思过去，这么些年究竟是活在被中共洗脑后所划的框框（党文化观念）里，还是真正活的是自我？在人神共怒、天灭中共的当下最后关头，是做一个.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 7:02 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520575.md#1" target="_blank">宋善：内部文件重见天日 中共迫害真相曝光</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520575.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/image-1-150x120.jpg" align ="left"></a>一个多月来，中共内部多份文件相继曝光，包括二十年前的绝密文件，都证实了中共操控国家机器、铺天盖地迫害法轮功学员的罪行，它无所不用其极的阴狠手段也难以遁形。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 4:58 AM			</td></tr>
@@ -21,15 +27,7 @@
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/7/15/n10564808.md#1" target="_blank">魔鬼在统治着我们的世界(19)：教育篇(下)</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/7/15/n10564808.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2018/07/fbc36dcdd8bda3b2be91d11c498872eb-150x120.jpg" align ="left"></a>在教育领域，虽然共产邪灵下手最狠的地方是大学，但它并没有放松对中小学的侵蚀。它采用各种狡猾的手段把学生变坏、变傻，为进一步在大学里给他们洗脑做准备。把一代一代学生变得知识越来越贫乏、思维能力越来越差，这个过程历时百年，其始作俑者是杜威领导的进步主义教育运动，其后的一波波教育改革大多没有脱离进步主义教育的藩篱。除了给学生.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 9:30 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/1/n12517641.md#1" target="_blank">【名家专栏】美媒报导政治事件中的幕后交易</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/1/n12517641.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/hunter-joe-biden-1200x807-150x120.jpg" align ="left"></a>《纽约邮报》和《福克斯新闻》是唯一深入调查笔记本电脑故事的媒体，据报导，联邦调查局已经获得了这台电脑，并且显然正在调查中。参议院委员会计划举行听证会。随着选举的临近，主流媒体为什么不按常理马上报导这个故事呢？我闻到了幕后交易的味道。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 8:45 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/1/n12518371.md#1" target="_blank">千百度：他们为什么要退出中共各级组织？</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/1/n12518371.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/10/20200926-PINSHAN-QuitCCP-01-150x120.jpg" align ="left"></a>自大纪元网站2004年12月3日发起“三退”(退党/团/队) 活动截止2020年11月1日傍晚，总计达到366,675,252人“三退”，昨日人数 65,888。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 8:12 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/1/n12518228.md#1" target="_blank">王友群：毛泽东秘书李锐三次挨整的经历</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/1/n12518228.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/ac9b6ed916aff836f33a23177dd426d6-150x120.jpg" align ="left"></a>曾经当过毛泽东秘书的李锐一生三次挨整，吃苦最多，命却很大，活了102岁。
-
-李锐，1917年4月13日，生于北京，祖籍湖南平江，毕业于武汉大学。曾任中共中央委员、中央组织部常务副部长、水电部副部长、毛泽东兼职秘书。李锐是反对上马三峡工程的代表人物之一，但他的意见被中共独裁者江泽民否决。
-李锐第一次挨整
-1943.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 7:25 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/31/n12516400.md#1" target="_blank">登陆作战有多难 美军夺取塞班岛的苦战</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/31/n12516400.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2020/11/LVTs_move_toward_Saipan_past_bombarding_cruisers_on_15_June_1944_80-G-231838-150x120.jpg" align ="left"></a>1943年11月，美军攻克塔拉瓦环礁，也付出了抢滩登陆的代价。美军吸取了教训，12月就开始对马绍尔群岛进行空袭，美军庞大的航母舰队很快摧毁了日军的空中力量。28,000名日军士兵和大量朝鲜劳工，被分配到各个岛屿上，显得捉襟见肘，而且缺乏给养。
-
-1944年初，美军进行了一个月的空袭、炮击和封锁，包括使用穿甲弹，用以.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 7:19 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/1/n12517018.md#1" target="_blank">【名家专栏】全球对中共的态度越趋强硬</a><br></h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/1/n12517018.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2019/11/GettyImages-1178637558-150x120.jpg" align ="left"></a>假如中共是一只股票，那么全世界的人民都不会购买。许多国家的人们似乎都识破中共的诡计并对其提出挑战。中共越偏执冷酷地追求硬实力，其软实力就变得越差。国际公众态度的加强，以及受到中共影响政府的经济和地缘政治的抵制表明，中共不受限制扩张的窗口确实已经关闭。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 7:15 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521064.md#1" target="_blank">袁斌：中共早期农民运动“好得很”？</a><br></h3>随着北伐的胜利进军，中共早期的农运中心很快由广东的陆海丰转移到了湖南。到1926年11月底，湖南全省已有54个县建立农民协会，会员从北伐前的40万上升为107万；到1927年1月，会员又激增至200万。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 11:40 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12520988.md#1" target="_blank">读者投书：曝光青岛市的黑暗和邪恶</a><br></h3>青岛市这些年一直是靠谎言及涉黑人员统治,但是表面却又以各种各样的伪善伪装,高举依法治国实际上带头违法,青岛市每一件冤假错案几乎都是政府人员人为造成的,仅举几个例子：......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 9:03 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520835.md#1" target="_blank">向真：共产主义阴影下 人民的自救之道</a><br></h3>每年的十一月七日，是“共产主义受害者纪念日”。去年该日，美国白宫发表川普总统的声明说：“在这一天，我们铭记一亿多因为共产主义压迫而死去的人们。今天，我们重申致力于基于民主、自由、正义和对每个人生命价值的深切尊重基础上，帮助所有人确保和平与繁荣的未来。”......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月03日 7:34 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12519321.md#1" target="_blank">陈思敏：消费下行成趋势 中共扩大割韭菜</a><br></h3>中共十四五规划“扩大内需”，此内需与十三五之前的内需不同，想要的效果是扩大国内居民消费。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年11月02日 4:58 PM			</td></tr>
